# bedrock_pdf_app

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  justfile  pyproject.toml  theme.py
prompts/: pdf_to_markdown_prompt.md  pdf_to_yaml_prompt.md
tabs/: pdf_to_markdown_tab.py  pdf_to_yaml_tab.py
ui_texts/: app_info.md  pdf_qa_help.md  pdf_to_markdown_help.md  pdf_to_yaml_help.md
utils/: file_loader.py
